--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,13 +20,23 @@ repositories {
 dependencies {
     implementation project(':db')
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+bootJar {
+    enabled = true
+}
+
+jar {
+    enabled = false
 }
