--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -12,4 +12,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root1234!!
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
 
