--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/delivery?useSSL=false&useUnicode=true
+    url: jdbc:mysql://localhost:3306/delivery?useUnicode=true&allowPublicKeyRetrieval=true&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root1234!!
