--- a/api/build.gradle
+++ b/api/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation project(':db')
     implementation project(':common')
 
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
