--- a/store-admin/src/main/resources/application.yml
+++ b/store-admin/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   config:
     import: classpath:env.yml
+  rabbitmq:
+    host: localhost
+    port: 5672
   jpa:
     show-sql: true
     properties:
