--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework:spring-core:6.0.12'
+    implementation 'org.springframework:spring-context:6.0.12'
+
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
