--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'service'
-include ':api'
-include ':db'
-include ':store-admin'
-include ':common'
-include ':apigw'
-include ':account'
+include 'api'
+include 'db'
+include 'store-admin'
+include 'common'
+include 'apigw'
+include 'account'
