gateway에서 토큰 검증 기능 구현

--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9090
+
+
 spring:
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       routes:
@@ -11,3 +15,7 @@ spring:
           filters:
             - RewritePath=/service-api(?<segment>/?.*), $\{segment}
             - ServiceApiPublicFilter
+
+internal-api:
+  account:
+    url: http://localhost:8082
