--- a/apigw/build.gradle
+++ b/apigw/build.gradle
@@ -23,6 +23,8 @@ ext {
 }
 
 dependencies {
+    implementation project(':common')
+    
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
